<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">plakar PoC</string>
    <string name="grant_access">Grant all files access</string>
    <string name="check_binary">plakar version</string>
    <string name="back_up">Back up /sdcard</string>
    <string name="store_hint">Store location, e.g. http://192.168.1.10:9876</string>
    <string name="passphrase_hint">Repository passphrase</string>
    <string name="access_granted">All files access: granted</string>
    <string name="access_missing">All files access: NOT granted</string>
</resources>
